@@ -1,3 +1,11 @@
+2011-03-16  Leif Madsen <lmadsen@digium.com>
+
+	* Asterisk 1.6.1.23 Released.
+
+	* AST-2011-003: Resource exhaustion in Asterisk Manager Interface
+
+	* AST-2011-004: Remote crash vulnerability in TCP/TLS server
+
 2011-02-21  Leif Madsen <lmadsen@digium.com>
 
 	* Asterisk 1.6.1.22 Released.
